--- a/templates/base.html
+++ b/templates/base.html
@@ -31,7 +31,96 @@
         <title>StepLDN {% block extra_title %}{% endblock %}</title>
     </head>
     <body>
-        <header class="container-fluid fixed-top"></header>
+        <header class="container-fluid fixed-top">
+            <div class="container h-100">
+                <div class="row h-100">
+                    <div class="col-3 col-md-3 my-auto">
+                        <h1 class="display-4 logo-font text-black">
+                            StepLDN
+                        </h1>
+                    </div>
+                    <div class="col-6 col-md-6 my-auto text-center">
+                        <form method="GET" action="">
+                            <div class="input-group w-100">
+                                <input class="form-control border border-black rounded-0" type="text" name="q" placeholder="Search our site">
+                                <div class="input-group-append">
+                                    <button class="form-control btn btn-black border border-black rounded-0" type="submit">
+                                        <span class="icon">
+                                            <i class="fas fa-search"></i>
+                                        </span>
+                                    </button>
+                                </div>
+                            </div>
+                        </form>          
+                    </div>
+                    <div class="col-3 col-md-3 my-auto text-center">
+                        <ul class="list-inline list-unstyled text-center">
+                            <li class="list-inline-item">
+                                <a class="text-black nav-link" href="#" id="user-options" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                    <div class="text-center">
+                                        <div><i class="fas fa-user fa-lg"></i></div>
+                                        <p class="my-0">My Account</p>
+                                    </div>
+                                </a>
+                                <div class="dropdown-menu border-0" aria-labelledby="user-options">
+                                    {% if request.user.is_authenticated %}
+                                        {% if request.user.is_superuser %}
+                                            <a href="" class="dropdown-item">Product Management</a>
+                                        {% endif %}
+                                        <a href="" class="dropdown-item">My Profile</a>
+                                        <a href="{% url 'account_logout' %}" class="dropdown-item">Logout</a>
+                                    {% else %}
+                                        <a href="{% url 'account_signup' %}" class="dropdown-item">Register</a>
+                                        <a href="{% url 'account_login' %}" class="dropdown-item">Login</a>
+                                    {% endif %}
+                                </div>
+                            </li>
+                            <li class="list-inline-item">
+                                <a class="{% if grand_total %}text-info font-weight-bold{% else %}text-black{% endif %} nav-link" href="">
+                                    <div class="text-center">
+                                        <div><i class="fas fa-shopping-bag fa-lg"></i></div>
+                                        <p class="my-0">
+                                            {% if grand_total %}
+                                                ${{ grand_total|floatformat:2 }}
+                                            {% else %}
+                                                $0.00
+                                            {% endif %}
+                                        </p>
+                                    </div>
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                    <!-- <div class="col-1 col-md-1 my-auto text-center"></div>
+                    <div class="col-1 col-md-1 my-auto text-center">
+                        <h4>
+                           Account
+                        </h4>          
+                    </div>
+                    <div class="col-1 col-md-1 my-auto text-center">
+                        <h4>
+                           Cart
+                        </h4>          
+                    </div> -->
+                </div>
+            </div>
+            <div class="container h-100">
+                <div class="row h-100">
+                    <div class="col-3 col-md-3 my-auto text-center">
+                        Mens
+                    </div>
+                    <div class="col-3 col-md-3 my-auto text-center">
+                        Womens
+                    </div>
+                    <div class="col-3 col-md-3 my-auto text-center">
+                        Childrens
+                    </div>
+                    <div class="col-3 col-md-3 my-auto text-center">
+                        Accessories
+                    </div>
+                </div>
+            </div>
+        </header>
 
         {% if messages %}
             <div class="message-container"></div>
