--- a/templates/base.html
+++ b/templates/base.html
@@ -14,12 +14,17 @@
 
         {% block corecss %}
             <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+            <link rel="stylesheet" href="{% static 'css/base.css' %}">
+            <link rel="preconnect" href="https://fonts.googleapis.com">
+            <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+            <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;500&family=Hurricane&family=Lato&family=Playfair+Display&family=Roboto:wght@700&display=swap" rel="stylesheet">
         {% endblock %}
 
         {% block extra_css %}
         {% endblock %}
 
         {% block corejs %}
+            <script src="https://kit.fontawesome.com/b62f6ec01c.js" crossorigin="anonymous"></script>
             <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
             <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
             <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
@@ -33,11 +38,14 @@
     <body>
         <header class="container-fluid fixed-top">
             <div class="container h-100">
-                <div class="row h-100">
+                <div id="topnav" class="row bg-color pt-lg-2 d-none d-lg-flex">
                     <div class="col-3 col-md-3 my-auto">
-                        <h1 class="display-4 logo-font text-black">
+                        <h1 class="display-4 logo-f text-black">
                             StepLDN
                         </h1>
+                        <!-- <a href="#">
+                            <img id="logo" src="../media/step-logo.png" alt="Step London Logo">
+                        </a> -->
                     </div>
                     <div class="col-6 col-md-6 my-auto text-center">
                         <form method="GET" action="">
@@ -59,7 +67,7 @@
                                 <a class="text-black nav-link" href="#" id="user-options" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                     <div class="text-center">
                                         <div><i class="fas fa-user fa-lg"></i></div>
-                                        <p class="my-0">My Account</p>
+                                        <p class="my-0 text-black">My Account</p>
                                     </div>
                                 </a>
                                 <div class="dropdown-menu border-0" aria-labelledby="user-options">
@@ -79,7 +87,7 @@
                                 <a class="{% if grand_total %}text-info font-weight-bold{% else %}text-black{% endif %} nav-link" href="">
                                     <div class="text-center">
                                         <div><i class="fas fa-shopping-bag fa-lg"></i></div>
-                                        <p class="my-0">
+                                        <p class="my-0 text-black">
                                             {% if grand_total %}
                                                 ${{ grand_total|floatformat:2 }}
                                             {% else %}
@@ -91,32 +99,33 @@
                             </li>
                         </ul>
                     </div>
-                    <!-- <div class="col-1 col-md-1 my-auto text-center"></div>
-                    <div class="col-1 col-md-1 my-auto text-center">
-                        <h4>
-                           Account
-                        </h4>          
-                    </div>
-                    <div class="col-1 col-md-1 my-auto text-center">
-                        <h4>
-                           Cart
-                        </h4>          
-                    </div> -->
                 </div>
             </div>
             <div class="container h-100">
                 <div class="row h-100">
-                    <div class="col-3 col-md-3 my-auto text-center">
-                        Mens
+                    <div class="col-3 col-md-3 my-auto text-center site-button nav-btn">
+                        <a href="#" class="text-black"> Mens </a>
+                        <!-- <div><i class="fa-light fa-chevrons-down"></i></div> -->
+                    </div>
+                    <div class="col-3 col-md-3 my-auto text-center site-button nav-btn">
+                        <a href="#" class="text-black"> Womens </a>
+                    </div>
+                    <div class="col-3 col-md-3 my-auto text-center site-button nav-btn">
+                        <a href="#" class="text-black"> Childrens </a>
+                    </div>
+                    <div class="col-3 col-md-3 my-auto text-center site-button nav-btn">
+                        <a href="#" class="text-black"> Accessories </a> 
+                    </div>
+                </div>
+            </div>
+            <div class="container h-100">
+                <div class="row h-100 banner">
+                    <div class="col-9 col-md-9 my-auto text-center">
+                        <p>Get 10% off all orders when you sign up for the <a href="#">news letter</a> and keep up to date with future offers!</p>
                     </div>
                     <div class="col-3 col-md-3 my-auto text-center">
-                        Womens
-                    </div>
-                    <div class="col-3 col-md-3 my-auto text-center">
-                        Childrens
-                    </div>
-                    <div class="col-3 col-md-3 my-auto text-center">
-                        Accessories
+                        <a href="#" class="text-black">Sign In</a> |
+                        <a href="#" class="text-black">Create an account</a>
                     </div>
                 </div>
             </div>
