--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -2,13 +2,52 @@
 {% load static %}
 
 {% block page_header %}
-    <div class="container header-container">
-        <div class="row">
-            <div class="col"></div>
-        </div>
-    </div>
+   
 {% endblock %}
 
 {% block content %}
-    
+<div class="container header-container">
+    <div class="row">
+        <div class="col white-container "></div>
+    </div>
+    <div class="row bg-color">
+        <div class="col-lg-6 col-sm-12 home-img">
+            <a href="#" class="img-left">
+                <img class="image-border " src="../media/mens-shoes.png" alt="mens shoes home page image">
+                <div class="overlay">
+                    <p>Mens Shoes</p>
+                </div>
+            </a>
+        </div> 
+        <div class="col-lg-6 col-sm-12 home-img">
+            <a href="#" class="img-right">
+                <img class="image-border" src="../media/womens-shoes.png" alt="womens shoes home page image">
+                <div class="overlay">
+                    <p>Womens Shoes</p>
+                </div>
+            </a>
+        </div>
+        <div class="col-lg-6 col-sm-12 home-img">
+            <a href="#" class="img-left">
+                <img class="image-border" src="../media/childrens-shoes.png" alt="childrens shoes home page image">
+                <div class="overlay">
+                    <p>Childrens Shoes</p>
+                </div>
+            </a>
+        </div>
+        <div class="col-lg-6 col-sm-12 home-img">
+            <a href="#" class="img-right">
+                <img class="image-border" src="../media/shoe-accessories.png" alt="shoe accessories home page image">
+                <div class="overlay">
+                    <p>Shoe Accessories</p>
+                </div>
+            </a>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col newsletter">
+            <h1 class="text-center"> INSERT NEWS LETTER HERE!</h1>
+        </div>
+    </div>
+</div>
 {% endblock %}
