--- a/templates/base.html
+++ b/templates/base.html
@@ -14,7 +14,7 @@
 
         {% block corecss %}
             <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-            <link rel="stylesheet" href="{% static 'css/base.css' %}">
+            <link rel="stylesheet" href="{% static 'css/basea.css' %}">
             <link rel="preconnect" href="https://fonts.googleapis.com">
             <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
             <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;500&family=Hurricane&family=Lato&family=Playfair+Display&family=Roboto:wght@700&display=swap" rel="stylesheet">
@@ -38,8 +38,8 @@
     <body>
         <header class="container-fluid fixed-top">
             <div class="container h-100">
-                <div id="topnav" class="row bg-color pt-lg-2 d-none d-lg-flex">
-                    <div class="col-3 col-md-3 my-auto">
+                <div id="topnav" class="row bg-color pt-lg-2 d-lg-flex">
+                    <div class="col-lg-3 col-md-4 col-sm-4 my-auto">
                         <h1 class="display-4 logo-f text-black">
                             StepLDN
                         </h1>
@@ -47,7 +47,7 @@
                             <img id="logo" src="../media/step-logo.png" alt="Step London Logo">
                         </a> -->
                     </div>
-                    <div class="col-6 col-md-6 my-auto text-center">
+                    <div class="col-lg-6 col-md-2 col-sm-2 my-auto text-center">
                         <form method="GET" action="">
                             <div class="input-group w-100">
                                 <input class="form-control border border-black rounded-0" type="text" name="q" placeholder="Search our site">
@@ -61,7 +61,7 @@
                             </div>
                         </form>          
                     </div>
-                    <div class="col-3 col-md-3 my-auto text-center">
+                    <div class="col-lg-3 col-md-6 col-sm-6 my-auto text-center">
                         <ul class="list-inline list-unstyled text-center">
                             <li class="list-inline-item">
                                 <a class="text-black nav-link" href="#" id="user-options" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -101,23 +101,64 @@
                     </div>
                 </div>
             </div>
+
             <div class="container h-100">
-                <div class="row h-100">
-                    <div class="col-3 col-md-3 my-auto text-center site-button nav-btn">
-                        <a href="#" class="text-black"> Mens </a>
-                        <!-- <div><i class="fa-light fa-chevrons-down"></i></div> -->
+                <div class="row d-lg-flex">
+                    <div class="col-lg-3 col-sm-6 my-auto text-center nav-dropdown">
+                        <a class="border-black site-button nav-link" href="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            <div class="text-center">
+                                <p class="my-0 text-black nav-btn">Mens</p>
+                                <div><i class="fa-light fa-chevrons-down"></i></div>
+                            </div>
+                        </a>
+                        <div class="dropdown-menu border-black" aria-labelledby="user-options">
+                            <a href="#" class="dropdown-item">Trainers</a>
+                            <a href="#" class="dropdown-item">Flipflops</a>
+                            <a href="#" class="dropdown-item">ect...</a>
+                        </div>
                     </div>
-                    <div class="col-3 col-md-3 my-auto text-center site-button nav-btn">
-                        <a href="#" class="text-black"> Womens </a>
+                    <div class="col-lg-3 col-sm-6 my-auto text-center nav-dropdown">
+                        <a class="border-black site-button nav-link" href="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            <div class="text-center">
+                                <p class="my-0 text-black nav-btn">Womens</p>
+                                <div><i class="fa-light fa-chevrons-down"></i></div>
+                            </div>
+                        </a>
+                        <div class="dropdown-menu border-black" aria-labelledby="user-options">
+                            <a href="#" class="dropdown-item">Trainers</a>
+                            <a href="#" class="dropdown-item">Flipflops</a>
+                            <a href="#" class="dropdown-item">ect...</a>
+                        </div>
                     </div>
-                    <div class="col-3 col-md-3 my-auto text-center site-button nav-btn">
-                        <a href="#" class="text-black"> Childrens </a>
+                    <div class="col-lg-3 col-sm-6 my-auto text-center nav-dropdown">
+                        <a class="border-black site-button nav-link" href="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            <div class="text-center">
+                                <p class="my-0 text-black nav-btn">Childrens</p>
+                                <div><i class="fa-light fa-chevrons-down"></i></div>
+                            </div>
+                        </a>
+                        <div class="dropdown-menu border-black" aria-labelledby="user-options">
+                            <a href="#" class="dropdown-item">Trainers</a>
+                            <a href="#" class="dropdown-item">Flipflops</a>
+                            <a href="#" class="dropdown-item">ect...</a>
+                        </div>
                     </div>
-                    <div class="col-3 col-md-3 my-auto text-center site-button nav-btn">
-                        <a href="#" class="text-black"> Accessories </a> 
-                    </div>
+                    <div class="col-lg-3 col-sm-6 my-auto text-center nav-dropdown">
+                        <a class="border-black site-button nav-link" href="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            <div class="text-center">
+                                <p class="my-0 text-black nav-btn">Accessories</p>
+                                <div><i class="fa-light fa-chevrons-down"></i></div>
+                            </div>
+                        </a>
+                        <div class="dropdown-menu border-black" aria-labelledby="user-options">
+                            <a href="#" class="dropdown-item">Trainers</a>
+                            <a href="#" class="dropdown-item">Flipflops</a>
+                            <a href="#" class="dropdown-item">ect...</a>
+                        </div>
+                    </div>  
                 </div>
             </div>
+
             <div class="container h-100">
                 <div class="row h-100 banner">
                     <div class="col-9 col-md-9 my-auto text-center">
