--- a/templates/base.html
+++ b/templates/base.html
@@ -112,7 +112,7 @@
                             </div>
                         </a>
                         <div class="dropdown-menu border-black" aria-labelledby="user-options">
-                            <a href="#" class="dropdown-item">Trainers</a>
+                            <a href="{% url 'products' %}" class="dropdown-item">Trainers</a>
                             <a href="#" class="dropdown-item">Flipflops</a>
                             <a href="#" class="dropdown-item">ect...</a>
                         </div>
