--- a/static/css/basea.css
+++ b/static/css/basea.css
@@ -95,61 +95,23 @@ body {
     padding: 14%;
 }
 
-.image-border {
+.home-img {
+    position:relative;
+    left: 15%;
     border: 2px solid black;
 }
 
-.home-img {
-    padding-left: 7%;
-    margin: 2% 0;
+.img-up {
+    bottom: 15%;
 }
 
-.img-left img{
-    position: relative;
-  	z-index:1;
+.img-down {
+    top: 15%;
 }
 
-.img-right img{
-    position:relative;
-  	z-index:1;
+.margin-btm {
+    margin-bottom: 5%;
 }
-
-.overlay p{ 
-    text-align: center;
-    margin-top: 40%;
-}
-
-.overlay{
-	position: absolute;
-    z-index: 2;
-    top: 0;
-    opacity: 0;
-    color: black;
-    width: 100%;
-    height: 100%;
-    transition: .5s ease;
-    background-color: white;
-}
-
-.img-left:hover .overlay{
-	opacity:0.5;
-}
-
-.img-right:hover .overlay{
-	opacity:0.5;
-}
-
-.img-left {
-    position:absolute;
-    bottom: 20%;
-}
-
-.img-right {
-    position:relative;
-    top: 20%;
-}
-
-
 
 /* -------------------------------- Media Queries */
 
