--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -12,7 +12,33 @@
 {% block content %}
 <div class="container-fluid">
     <div class="row">
-        <div class="col-12 col-md-6 col-lg-4 offset-lg-2">
+        <div class="col white-container "></div>
+    </div>
+    <div class="row">
+        <div class="col-8 bg-color">
+            {% if product.image %}
+                <a href="{{ product.image.url }}" target="_blank">
+                    <img class="home-img img-up" src="{{ product.image.url }}" alt="{{ product.name }}">
+                </a>
+                {% else %}
+                <a href="">
+                    <img class="home-img img-up" src="{{ MEDIA_URL }}noimage.png" alt="{{ product.name }}">
+                </a>
+            {% endif %}
+            <div class="row desc">
+                <div class="col"><p class="font-weight-bold">{{ product.description }}</p></div>
+                <div class="col"><p class="font-weight-bold">${{ product.price }}</p></div>
+            </div>
+            
+            
+        </div>
+        <div class="col-4">
+            <p>sdhv iushvns</p>
+        </div>
+    <div class="row">
+        <div class="col white-container "> ADD FOOTER</div>
+    </div>
+        <!-- <div class="col-12 col-md-6 col-lg-4 offset-lg-2">
             <div class="image-container my-5">
                 {% if product.image %}
                     <a href="{{ product.image.url }}" target="_blank">
@@ -36,6 +62,6 @@
                 {% endif %}
                 <p class="mt-3">{{ product.description }}</p>
             </div>
-        </div>
+        </div> -->
     </div>
 {% endblock %}
