Added search functionality

--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -33,7 +33,11 @@
             
         </div>
         <div class="col-4">
-            <p>sdhv iushvns</p>
+            <h1 class="logo-f">{{ product.name }}</h1>
+            <br>
+            <p class="text-center">Select size</p>
+            <br>
+            <button class="site-button add-bag">Add to bag</button>
         </div>
     <div class="row">
         <div class="col white-container "> ADD FOOTER</div>
