--- a/static/css/baseb.css
+++ b/static/css/baseb.css
@@ -24,6 +24,7 @@ body {
 
 .logo-f{
     font-family: 'Playfair Display', serif;
+    text-align: center !important; 
 }
 
 .banner {
@@ -119,6 +120,11 @@ body {
     position:relative;
     bottom: 10%;
     left: 15%;
+}
+
+.add-bag {
+    position: relative;
+    left: 40%;
 }
 
 /* -------------------------------- Media Queries */
