--- a/templates/base.html
+++ b/templates/base.html
@@ -40,9 +40,11 @@
             <div class="container h-100">
                 <div id="topnav" class="row bg-color pt-lg-2 d-lg-flex">
                     <div class="col-lg-3 col-md-4 col-sm-4 my-auto">
-                        <h1 class="display-4 logo-f text-black">
-                            StepLDN
-                        </h1>
+                        <a href="{% url 'home' %}" class="nav-link main-logo-link">
+                            <h1 class="display-4 logo-f text-black">                            
+                                StepLDN
+                            </h1>
+                        </a>
                         <!-- <a href="#">
                             <img id="logo" src="../media/step-logo.png" alt="Step London Logo">
                         </a> -->
