--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -8,7 +8,21 @@
 {% block content %}
 <div class="container header-container">
     <div class="row">
-        <div class="col white-container "></div>
+        <div class="col white-container ">
+            <!-- temp -->
+            <div class="nav-item dropdown">
+                <a class="logo-font font-weight-bold nav-link text-black mr-5" href="#" id="all-products-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    All Products
+                </a>
+                <div class="dropdown-menu border-0" aria-labelledby="all-products-link">
+                    <a href="{% url 'products' %}?sort=price&direction=asc" class="dropdown-item">By Price</a>
+                    <a href="{% url 'products' %}?sort=rating&direction=desc" class="dropdown-item ">By Rating</a>
+                    <a href="{% url 'products' %}?sort=category&direction=asc" class="dropdown-item ">By Category</a>
+                    <a href="{% url 'products' %}" class="dropdown-item">All Products</a>
+                </div>
+            </div>
+            <!-- end temp -->
+        </div>
     </div>
     <div class="row bg-color">
         <div class="col-lg-6 col-sm-12 margin-btm ">
