--- a/static/css/basec.css
+++ b/static/css/basec.css
@@ -72,6 +72,18 @@ body {
     color: white;
 }
 
+.btt-button {
+    height: 42px;
+    width: 42px;
+    position: fixed;
+    bottom: 10px;
+    right: 10px;
+}
+
+.btt-link {
+    cursor: pointer;
+}
+
 .text-black {
     color: #000 !important;
 }
