--- a/static/css/basec.css
+++ b/static/css/basec.css
@@ -97,6 +97,19 @@ body {
     padding: 0 !important;
 }
 
+.btn-outline-black {
+    background: white;
+    color: black !important; /* use important to override link colors for <a> elements */
+    border: 1px solid black;
+}
+
+.btn-outline-black:hover,
+.btn-outline-black:active,
+.btn-outline-black:focus {
+    background: black;
+    color: white !important;
+}
+
 /* Home */
 
 .white-container {
