--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -3,7 +3,7 @@
 {% load bag_tools %}
 
 {% block extra_css %}
-    <link rel="stylesheet" href="{% static 'checkout/css/checkouta.css' %}">
+    <link rel="stylesheet" href="{% static 'checkout/css/checkoutb.css' %}">
 {% endblock %}
 
 {% block page_header %}
@@ -133,11 +133,18 @@
             </div>
         </div>
     </div>
+    <div id="loading-overlay">
+        <h1 class="text-light logo-font loading-spinner">
+            <span class="icon">
+                <i class="fas fa-3x fa-sync-alt fa-spin"></i>
+            </span>
+        </h1>
+    </div>
 {% endblock %}
 
 {% block postloadjs %}
     {{ block.super }}
     {{ stripe_public_key|json_script:"id_stripe_public_key" }}
     {{ client_secret|json_script:"id_client_secret" }}
-    <script src="{% static 'checkout/js/stripe_elementsa.js' %}"></script>
+    <script src="{% static 'checkout/js/stripe_elementsb.js' %}"></script>
 {% endblock %}
