--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -11,9 +11,11 @@
 
 {% block content %}
 <div class="container-fluid">
+    <div class="row s-white-container">
+        <div class=""></div>
+    </div>
     <div class="row">
         <div class="col text-center mt-3">
-            <h2 class="logo-f">Products</h2>
             {% for c in current_categories %}
                 <a class="category-badge text-decoration-none" href="{% url 'products' %}?category={{ c.name }}">
                     <span class="p-2 mt-2 badge badge-white text-black rounded-0 border border-dark">{{ c.friendly_name }}</span>
