--- a/templates/allauth/account/login.html
+++ b/templates/allauth/account/login.html
@@ -6,8 +6,69 @@
 {% block head_title %}{% trans "Sign In" %}{% endblock %}
 
 {% block content %}
+    <div class="container header-container">
+        <div class="row white-container">
+            <div class=""></div>
+        </div>
+        <div class="row bg-color">
+            <div class="col-8 text-center box-container box-left">
+                <h1 class="logo-f">{% trans "Sign In" %}</h1>
+                <br>
+                {% get_providers as socialaccount_providers %}
 
-<h1>{% trans "Sign In" %}</h1>
+                {% if socialaccount_providers %}
+                <p>{% blocktrans with site.name as site_name %}Please sign in with one
+                of your existing third party accounts. Or, <a href="{{ signup_url }}">sign up</a>
+                for a {{ site_name }} account and sign in below:{% endblocktrans %}</p>
+
+                <div class="socialaccount_ballot">
+
+                  <ul class="socialaccount_providers">
+                    {% include "socialaccount/snippets/provider_list.html" with process="login" %}
+                  </ul>
+
+                  <div class="login-or">{% trans 'or' %}</div>
+
+                </div>
+
+                {% include "socialaccount/snippets/login_extra.html" %}
+
+                {% else %}
+                <p>{% blocktrans %}If you have not created an account yet, then please
+                <a href="{{ signup_url }}">sign up</a> first.{% endblocktrans %}</p>
+                {% endif %}
+                <br>
+
+                <form class="login" method="POST" action="{% url 'account_login' %}">
+                  {% csrf_token %}
+                  {{ form.as_p }}
+                  {% if redirect_field_value %}
+                  <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
+                  {% endif %}
+                  <a class="button secondaryAction" href="{% url 'account_reset_password' %}">{% trans "Forgot Password?" %}</a>
+                  <br>
+                  <br>
+                  <button class="primaryAction btn btn-outline-black rounded-0 btn-lg long-btn" type="submit">{% trans 'SIGN IN' %} &raquo;</button>
+                </form>
+                <br>
+                <div class="row register">
+                    <p>Dont have an account yet?</p>
+                     
+                    <a href="#" class="btn btn-outline-black rounded-0 btn-lg">
+                        <span class="text-uppercase">Register Now</span>
+                    </a>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col newsletter">
+                <h1 class="text-center logo-f"> INSERT NEWS LETTER HERE!</h1>
+            </div>
+        </div>
+    </div>
+
+
+
 
 {% get_providers as socialaccount_providers %}
 
@@ -40,7 +101,7 @@ for a {{ site_name }} account and sign in below:{% endblocktrans %}</p>
   <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
   {% endif %}
   <a class="button secondaryAction" href="{% url 'account_reset_password' %}">{% trans "Forgot Password?" %}</a>
-  <button class="primaryAction" type="submit">{% trans "Sign In" %}</button>
+  <button class="primaryAction long-btn" type="submit">{% trans "Sign In" %}</button>
 </form>
 
 {% endblock %}
