--- a/templates/base.html
+++ b/templates/base.html
@@ -14,7 +14,7 @@
 
         {% block corecss %}
             <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-            <link rel="stylesheet" href="{% static 'css/basee.css' %}">
+            <link rel="stylesheet" href="{% static 'css/basei.css' %}">
             <link rel="preconnect" href="https://fonts.googleapis.com">
             <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
             <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;500&family=Hurricane&family=Lato&family=Playfair+Display&family=Roboto:wght@700&display=swap" rel="stylesheet">
@@ -107,7 +107,7 @@
             </div>
 
             <div class="container h-100">
-                <div class="row d-lg-flex">
+                <div class="row d-lg-flex ">
                     <div class="col-lg-3 col-sm-6 my-auto text-center nav-dropdown">
                         <a class="border-black site-button nav-link" href="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                             <div class="text-center">
@@ -116,9 +116,9 @@
                             </div>
                         </a>
                         <div class="dropdown-menu border-black" aria-labelledby="user-options">
+                            <a href="{% url 'products' %}?category=mens_trainers,mens_flipflops" class="dropdown-item">All Mens Shoes</a>
                             <a href="{% url 'products' %}?category=mens_trainers" class="dropdown-item">Trainers</a>
                             <a href="{% url 'products' %}?category=mens_flipflops" class="dropdown-item">Flipflops</a>
-                            <a href="#" class="dropdown-item">ect...</a>
                         </div>
                     </div>
                     <div class="col-lg-3 col-sm-6 my-auto text-center nav-dropdown">
@@ -129,9 +129,9 @@
                             </div>
                         </a>
                         <div class="dropdown-menu border-black" aria-labelledby="user-options">
+                            <a href="{% url 'products' %}?category=womens_trainers,womens_flipflops" class="dropdown-item">All Womens Shoes</a>
                             <a href="{% url 'products' %}?category=womens_trainers" class="dropdown-item">Trainers</a>
-                            <a href="{% url 'products' %}?category=womens_flipflops" class="dropdown-item">Flipflops</a>
-                            <a href="#" class="dropdown-item">ect...</a>
+                            <a href="{% url 'products' %}?category=womens_flipflops" class="dropdown-item">Flipflops</a>     
                         </div>
                     </div>
                     <div class="col-lg-3 col-sm-6 my-auto text-center nav-dropdown">
@@ -142,23 +142,18 @@
                             </div>
                         </a>
                         <div class="dropdown-menu border-black" aria-labelledby="user-options">
+                            <a href="{% url 'products' %}?category=childrens_trainers,childrens_flipflops" class="dropdown-item">All Childrens Shoes</a>
                             <a href="{% url 'products' %}?category=childrens_trainers" class="dropdown-item">Trainers</a>
                             <a href="{% url 'products' %}?category=childrens_flipflops" class="dropdown-item">Flipflops</a>
-                            <a href="#" class="dropdown-item">ect...</a>
                         </div>
                     </div>
                     <div class="col-lg-3 col-sm-6 my-auto text-center nav-dropdown">
-                        <a class="border-black site-button nav-link" href="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        <a class="border-black site-button nav-link" href="{% url 'products' %}?category=accessories">
                             <div class="text-center">
                                 <p class="my-0 text-black nav-btn">Accessories</p>
                                 <div><i class="fa-light fa-chevrons-down"></i></div>
                             </div>
                         </a>
-                        <div class="dropdown-menu border-black" aria-labelledby="user-options">
-                            <a href="{% url 'products' %}?category=accessories" class="dropdown-item">Trainers</a>
-                            <a href="#" class="dropdown-item">Flipflops</a>
-                            <a href="#" class="dropdown-item">ect...</a>
-                        </div>
                     </div>  
                 </div>
             </div>
@@ -174,11 +169,11 @@
                     </div>
                 </div>
             </div>
-            <div id="delivery-banner" class="row text-center">
+            <!-- <div id="delivery-banner" class="row text-center">
                 <div class="col">
                     <h4 class="logo-font my-1">Free delivery on orders over ${{ free_delivery_threshold }}!</h4>                
                 </div>            
-            </div>
+            </div> -->
         </header>
 
         {% if messages %}
