Add white space to top of all auth pages

--- a/templates/allauth/account/email_confirm.html
+++ b/templates/allauth/account/email_confirm.html
@@ -7,6 +7,9 @@
 
 
 {% block content %}
+<div class="row white-container">
+    <div class=""></div>
+</div>
 <h1>{% trans "Confirm E-mail Address" %}</h1>
 
 {% if confirmation %}
