--- a/templates/allauth/account/email.html
+++ b/templates/allauth/account/email.html
@@ -5,6 +5,9 @@
 {% block head_title %}{% trans "Account" %}{% endblock %}
 
 {% block content %}
+<div class="row white-container">
+  <div class=""></div>
+</div>
     <h1>{% trans "E-mail Addresses" %}</h1>
 {% if user.emailaddress_set.all %}
 <p>{% trans 'The following e-mail addresses are associated with your account:' %}</p>
