--- a/templates/allauth/account/password_reset_from_key.html
+++ b/templates/allauth/account/password_reset_from_key.html
@@ -4,6 +4,12 @@
 {% block head_title %}{% trans "Change Password" %}{% endblock %}
 
 {% block content %}
+<div class="row white-container">
+    <div class=""></div>
+</div>
+<div class="row white-container">
+    <div class=""></div>
+</div>
     <h1>{% if token_fail %}{% trans "Bad Token" %}{% else %}{% trans "Change Password" %}{% endif %}</h1>
 
     {% if token_fail %}
