--- a/templates/allauth/account/password_set.html
+++ b/templates/allauth/account/password_set.html
@@ -5,6 +5,12 @@
 {% block head_title %}{% trans "Set Password" %}{% endblock %}
 
 {% block content %}
+<div class="row white-container">
+    <div class=""></div>
+</div>
+<div class="row white-container">
+    <div class=""></div>
+</div>
     <h1>{% trans "Set Password" %}</h1>
 
     <form method="POST" action="{% url 'account_set_password' %}" class="password_set">
