--- a/templates/allauth/account/email_confirm.html
+++ b/templates/allauth/account/email_confirm.html
@@ -10,6 +10,9 @@
 <div class="row white-container">
     <div class=""></div>
 </div>
+<div class="row white-container">
+    <div class=""></div>
+</div>
 <h1>{% trans "Confirm E-mail Address" %}</h1>
 
 {% if confirmation %}
