--- a/templates/allauth/account/password_change.html
+++ b/templates/allauth/account/password_change.html
@@ -5,6 +5,12 @@
 {% block head_title %}{% trans "Change Password" %}{% endblock %}
 
 {% block content %}
+<div class="row white-container">
+    <div class=""></div>
+</div>
+<div class="row white-container">
+    <div class=""></div>
+</div>
     <h1>{% trans "Change Password" %}</h1>
 
     <form method="POST" action="{% url 'account_change_password' %}" class="password_change">
