--- a/templates/allauth/account/password_reset_from_key_done.html
+++ b/templates/allauth/account/password_reset_from_key_done.html
@@ -4,6 +4,12 @@
 {% block head_title %}{% trans "Change Password" %}{% endblock %}
 
 {% block content %}
+<div class="row white-container">
+    <div class=""></div>
+</div>
+<div class="row white-container">
+    <div class=""></div>
+</div>
     <h1>{% trans "Change Password" %}</h1>
     <p>{% trans 'Your password is now changed.' %}</p>
 {% endblock %}
