--- a/templates/allauth/account/verified_email_required.html
+++ b/templates/allauth/account/verified_email_required.html
@@ -8,6 +8,10 @@
 <div class="row white-container">
     <div class=""></div>
 </div>
+<div class="row white-container">
+    <div class=""></div>
+</div>
+
 <h1>{% trans "Verify Your E-mail Address" %}</h1>
 
 {% url 'account_email' as email_url %}
