--- a/profiles/templates/profiles/profile.html
+++ b/profiles/templates/profiles/profile.html
@@ -5,26 +5,17 @@
     <link rel="stylesheet" href="{% static 'profiles/css/profilea.css' %}">
 {% endblock %}
 
-{% block page_header %}
-    <div class="container header-container">
-        <div class="row">
-            <div class="col"></div>
-        </div>
-    </div>
-{% endblock %}
-
 {% block content %}
-    <div class="col white-container "></div>
     <div class="container">
-        <div class="row">
+        <div class="row bag">
             <div class="col">
                 <hr>
-                <h2 class="logo-font mb-4">My Profile</h2>
+                <h2 class="logo-f mb-4">My Profile</h2>
                 <hr>
             </div>
         </div>
-        <div class="row">
-            <div class="col-12 col-lg-6">
+        <div class="row default-info bg-color">
+            <div class=" col-10 offset-1 box-container col-md-8 offset-1 box-up">
                 <p class="text-muted">Default Delivery Information</p>
                 <form class="mt-3" action="{% url 'profile' %}" method="POST" id="profile-update-form">
                     {% csrf_token %}
@@ -32,7 +23,9 @@
                     <button class="btn btn-black rounded-0 text-uppercase float-right">Update Information</button>
                 </form>
             </div>
-            <div class="col-12 col-lg-6">
+        </div>
+        <div class="row bg-color">
+            <div class="col-10 offset-1 box-container col-md-8 offset-md-2 box-up">
                 <p class="text-muted">Order History</p>
                 <div class="order-history table-responsive">
                     <table class="table table-sm table-borderless">
@@ -71,6 +64,11 @@
                         </tbody>
                     </table>
                 </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col newsletter">
+                <h1 class="text-center"> INSERT NEWS LETTER HERE!</h1>
             </div>
         </div>
     </div>
