--- a/templates/allauth/account/logout.html
+++ b/templates/allauth/account/logout.html
@@ -9,8 +9,8 @@
         <div class="row white-container">
             <div class=""></div>
         </div>
-        <div class="row bg-color">
-            <div class="col-8 text-center box-container box-left">
+        <div class="row bg-color out">
+            <div class="col-10 offset-1 col-md-8 text-center box-up box-container">
                 <h1 class="logo-f">{% trans "Sign Out" %}</h1>
                 <br>
                 <p>{% trans 'Are you sure you want to sign out?' %}</p>
