--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -9,40 +9,27 @@
 <div class="container header-container">
     <div class="row">
         <div class="col white-container ">
-            <!-- temp -->
-            <!-- <div class="nav-item dropdown">
-                <a class="logo-font font-weight-bold nav-link text-black mr-5" href="#" id="all-products-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    All Products
-                </a>
-                <div class="dropdown-menu border-0" aria-labelledby="all-products-link">
-                    <a href="{% url 'products' %}?sort=price&direction=asc" class="dropdown-item">By Price</a>
-                    <a href="{% url 'products' %}?sort=rating&direction=desc" class="dropdown-item ">By Rating</a>
-                    <a href="{% url 'products' %}?sort=category&direction=asc" class="dropdown-item ">By Category</a>
-                    <a href="{% url 'products' %}" class="dropdown-item">All Products</a>
-                </div>
-            </div> -->
-            <!-- end temp -->
         </div>
     </div>
     <div class="row bg-color">
-        <div class="col-lg-6 col-sm-12 margin-btm ">
+        <div class="col-12 col-md-6 img-up">
             <a href="{% url 'products' %}?category=mens_trainers,mens_flipflops">
-                <img class="image-border home-img img-up" src="../media/home-img2.png" alt="mens shoes home page image">
+                <img class="home-img img-up" src="../media/home-img2.png" alt="mens shoes home page image">
             </a>
         </div>
-        <div class="col-lg-6 col-sm-12 margin-btm ">
+        <div class="col-12 col-md-6 img-down">
             <a href="{% url 'products' %}?category=womens_trainers,womens_flipflops">
-                <img class="image-border home-img img-down" src="../media/home-img1.png" alt="womens shoes home page image">
+                <img class="home-img" src="../media/home-img1.png" alt="womens shoes home page image">
             </a>
         </div>
-        <div class="col-lg-6 col-sm-12">
+        <div class="col-12 col-md-6 img-up">
             <a href="{% url 'products' %}?category=childrens_trainers,childrens_flipflops">
-                <img class="image-border home-img img-up" src="../media/home-img4.png" alt="childrens shoes home page image">
+                <img class="home-img" src="../media/home-img4.png" alt="childrens shoes home page image">
             </a>
         </div>
-        <div class="col-lg-6 col-sm-12">
+        <div class="col-12 col-md-6 img-down">
             <a href="{% url 'products' %}?category=accessories">
-                <img class="image-border home-img img-down" src="../media/home-img3.png" alt="accessories home page image">
+                <img class="home-img" src="../media/home-img3.png" alt="accessories home page image">
             </a>
         </div>
     </div>
