--- a/products/templates/products/edit_product.html
+++ b/products/templates/products/edit_product.html
@@ -10,13 +10,16 @@
 {% endblock %}
 
 {% block content %}
-    <div class="overlay"></div>
+
     <div class="container">
+        <div class="row">
+            <div class="col white-container "></div>
+        </div>
         <div class="row">
             <div class="col-12 col-md-6">
                 <hr>
-                <h2 class="logo-font mb-4">Product Management</h2>
-                <h5 class="text-muted">Edit a Product</h5>
+                <h2 class="logo-f mb-4">Product Management</h2>
+                <h5 class="text-muted">Edit Product</h5>
                 <hr>
             </div>
         </div>
