--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -15,30 +15,33 @@
         <div class="col white-container "></div>
     </div>
     <div class="row">
-        <div class="col-8 bg-color">
-            {% if product.image %}
-                <a href="{{ product.image.url }}" target="_blank">
-                    <img class="home-img img-up" src="{{ product.image.url }}" alt="{{ product.name }}">
-                </a>
-                {% else %}
-                <a href="">
-                    <img class="home-img img-up" src="{{ MEDIA_URL }}noimage.png" alt="{{ product.name }}">
-                </a>
-            {% endif %}
-            <div class="row desc">
-                <div class="col"><p class="font-weight-bold">{{ product.description }}</p></div>
-                <div class="col"><p class="font-weight-bold">${{ product.price }}</p></div>
+        <div class="col-12 col-lg-8 bg-color">
+            <div class="row">
+                <div class="col-12 col-md-6">
+                     {% if product.image %}
+                        <a href="{{ product.image.url }}" target="_blank">
+                            <img class="detail-img" src="{{ product.image.url }}" alt="{{ product.name }}">
+                        </a>
+                        {% else %}
+                        <a href="">
+                            <img class="detail-img" src="{{ MEDIA_URL }}noimage.png" alt="{{ product.name }}">
+                        </a>
+                    {% endif %}
+                </div>
+                <div class="col-6 col-md-3 desc"><p class="font-weight-bold">{{ product.description }}</p></div>
+                <div class="col-md-3 desc">
+                    <p class="font-weight-bold">${{ product.price }}</p>
+                    {% if request.user.is_superuser %}
+                    <small class="ml-3 edit-btns">
+                        <a href="{% url 'edit_product' product.id %}">Edit</a> | 
+                        <a class="text-danger" href="{% url 'delete_product' product.id %}">Delete</a>
+                    </small>
+                    {% endif %}
+                </div>
             </div>
-            {% if request.user.is_superuser %}
-                <small class="ml-3">
-                    <a href="{% url 'edit_product' product.id %}">Edit</a> | 
-                    <a class="text-danger" href="{% url 'delete_product' product.id %}">Delete</a>
-                </small>
-            {% endif %}
-            
         </div>
-        <div class="col-4">
-            <h1 class="logo-f">{{ product.name }}</h1>
+        <div class="col-12 col-lg-4">
+            <h1 class="logo-f details-name">{{ product.name }}</h1>
             <br>
            
             <form class="form" action="{% url 'add_to_bag' product.id %}" method="POST">
