--- a/templates/allauth/account/password_change.html
+++ b/templates/allauth/account/password_change.html
@@ -15,7 +15,7 @@
 
     <form method="POST" action="{% url 'account_change_password' %}" class="password_change">
         {% csrf_token %}
-        {{ form.as_p }}
+        {{ form|crisry }}
         <button type="submit" name="action">{% trans "Change Password" %}</button>
     </form>
 {% endblock %}
