--- a/templates/allauth/account/signup.html
+++ b/templates/allauth/account/signup.html
@@ -10,8 +10,8 @@
         <div class="row white-container">
             <div class=""></div>
         </div>
-        <div class="row bg-color">
-            <div class="col-8 text-center box-container box-left">
+        <div class="row bg-color out">
+            <div class="col-10 offset-1 col-md-8 text-center box-up box-container">
                 <h1 class="logo-f">{% trans "Create A New Account" %}</h1>
                 <br>
                 <p>{% blocktrans %}Already have an account? Then please <a href="{{ login_url }}">sign in</a>.{% endblocktrans %}</p>
@@ -22,7 +22,6 @@
                   {% if redirect_field_value %}
                   <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
                   {% endif %}
-                  <!-- <button type="submit">{% trans "Sign Up" %} &raquo;</button> -->
                   <button class="btn btn-outline-black rounded-0 btn-lg long-btn" type="submit">{% trans 'SIGN UP' %} &raquo;</button>
                 </form>
             </div>
@@ -33,20 +32,5 @@
             </div>
         </div>
     </div>
-
-
-
-<h1>{% trans "Sign Up" %}</h1>
-
-<p>{% blocktrans %}Already have an account? Then please <a href="{{ login_url }}">sign in</a>.{% endblocktrans %}</p>
-
-<form class="signup" id="signup_form" method="post" action="{% url 'account_signup' %}">
-  {% csrf_token %}
-  {{ form|crispy }}
-  {% if redirect_field_value %}
-  <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
-  {% endif %}
-  <button type="submit">{% trans "Sign Up" %} &raquo;</button>
-</form>
 
 {% endblock %}
