--- a/templates/base.html
+++ b/templates/base.html
@@ -14,7 +14,7 @@
 
         {% block corecss %}
             <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-            <link rel="stylesheet" href="{% static 'css/basem.css' %}">
+            <link rel="stylesheet" href="{% static 'css/basex.css' %}">
             <link rel="preconnect" href="https://fonts.googleapis.com">
             <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
             <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;500&family=Hurricane&family=Lato&family=Playfair+Display&family=Roboto:wght@700&display=swap" rel="stylesheet">
@@ -38,20 +38,17 @@
         <title>StepLDN {% block extra_title %}{% endblock %}</title>
     </head>
     <body>
-        <header class="container-fluid fixed-top">
+        <header class="fixed-top">
             <div class="container h-100">
-                <div id="topnav" class="row bg-color pt-lg-2 d-lg-flex">
-                    <div class="col-lg-3 col-md-4 col-sm-4 my-auto">
+                <div class="row bg-color pt-lg-2 d-lg-flex">
+                    <div class="col-lg-3 col-md-12 col-sm-12 my-auto">
                         <a href="{% url 'home' %}" class="nav-link main-logo-link">
                             <h1 class="display-4 logo-f text-black">                            
                                 StepLDN
                             </h1>
                         </a>
-                        <!-- <a href="#">
-                            <img id="logo" src="../media/step-logo.png" alt="Step London Logo">
-                        </a> -->
                     </div>
-                    <div class="col-lg-6 col-md-2 col-sm-2 my-auto text-center">
+                    <div class="col-5 my-auto search-bar search text-center">
                         <form method="GET" action="{% url 'products' %}">
                             <div class="input-group w-100">
                                 <input class="form-control border border-black rounded-0" type="text" name="q" placeholder="Search our site">
@@ -65,7 +62,7 @@
                             </div>
                         </form>          
                     </div>
-                    <div class="col-lg-3 col-md-6 col-sm-6 my-auto text-center">
+                    <div class="col-lg-3 col-md-6 search  col-sm-6 my-auto text-center">
                         <ul class="list-inline list-unstyled text-center">
                             <li class="list-inline-item">
                                 <a class="text-black nav-link" href="#" id="user-options" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -106,7 +103,7 @@
                 </div>
             </div>
 
-            <div class="container h-100">
+            <!-- <div class="container h-100">
                 <div class="row d-lg-flex ">
                     <div class="col-lg-3 col-sm-6 my-auto text-center nav-dropdown">
                         <a class="border-black site-button nav-link" href="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -156,6 +153,15 @@
                         </a>
                     </div>  
                 </div>
+            </div> -->
+            <div class="row bg-white">
+                <nav class="navbar navbar-expand-lg navbar-light w-100">
+                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#main-nav" aria-controls="main-nav" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    {% include 'includes/mobile-top-header.html' %}
+                    {% include 'includes/main-nav.html' %}
+                </nav>
             </div>
 
             <div class="container h-100">
