--- a/templates/base.html
+++ b/templates/base.html
@@ -14,7 +14,7 @@
 
         {% block corecss %}
             <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-            <link rel="stylesheet" href="{% static 'css/basex.css' %}">
+            <link rel="stylesheet" href="{% static 'css/baset.css' %}">
             <link rel="preconnect" href="https://fonts.googleapis.com">
             <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
             <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;500&family=Hurricane&family=Lato&family=Playfair+Display&family=Roboto:wght@700&display=swap" rel="stylesheet">
@@ -147,6 +147,62 @@
         {% endblock %}
 
         {% block content %} 
+        {% endblock %}
+
+        {% block footer %}
+        <div class="container">
+            <div class="row bg-color">
+                <div class="socials col-8 offset-3 col-md-3 offset-md-1">
+                    <div class="row">
+                        <div class="col-6">
+                            <i class="fa-brands fa-instagram"></i>
+                        </div>  
+                        <div class="col-6">
+                            <i class="fa-brands fa-facebook-square"></i>
+                        </div>
+                    </div>
+                </div>
+                <div class="t-and-c col-12 col-md-4 text-center">
+                    <a href="#">Terms and conditions</a> | <a href="#"> Privacy policy</a>
+                    <br>
+                    <a href="#" class="">Site Map</a>
+                </div>
+                <div class="contacts col-12 col-md-3">
+                    <h4>Contact us:</h4>
+                    <a href="#" class="">Via the site</a>
+                    <br>
+                    <p>Phone number: 07123456789</p>
+                    <p>Email: stepldn@example.co.uk</p>
+                </div>
+            </div>
+        </div>
+        <!-- <div class="container h-100">
+            <div class="row bg-color">
+                <div class="col-12 col-md-3">
+                    <div class="row">
+                        <div class="col-6">
+                            <i class="fa-brands fa-instagram"></i>
+                        </div>  
+                        <div class="col-6">
+                            <i class="fa-brands fa-facebook-square"></i>
+                        </div>
+                    </div>
+                </div>
+                <div class="t-and-c col-12 col-md-4 text-center">
+                    <a href="#">Terms and conditions</a> |
+                    <a href="#"> Privacy policy</a>
+                    <br>
+                    <a href="#" class="">Site Map</a>
+                </div>
+                <div class="col-12 col-md-3">
+                    <h4>Contact us:</h4>
+                    <a href="#" class="">Via the site</a>
+                    <br>
+                    <p>Phone number: 07123456789</p>
+                    <p>Email: stepldn@example.co.uk</p>
+                </div>
+            </div>
+        </div>     -->
         {% endblock %}
 
         {% block postloadjs %}
