Add summernote for description

--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -30,7 +30,7 @@
                 </div>
                 <div class="col-6 col-md-4 desc"><p class="">{{ product.description }}</p></div>
                 <div class="col-md-3 desc">
-                    <p class="font-weight-bold" style="text-align:left">${{ product.price }}</p>
+                    <p class="font-weight-bold">${{ product.price }}</p>
                     {% if request.user.is_superuser %}
                     <small class="ml-3 edit-btns">
                         <a href="{% url 'edit_product' product.id %}">Edit</a> | 
