--- a/templates/base.html
+++ b/templates/base.html
@@ -14,10 +14,11 @@
 
         {% block corecss %}
             <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-            <link rel="stylesheet" href="{% static 'css/baset.css' %}">
+            <link rel="stylesheet" href="{% static 'css/baseu.css' %}">
             <link rel="preconnect" href="https://fonts.googleapis.com">
             <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
             <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;500&family=Hurricane&family=Lato&family=Playfair+Display&family=Roboto:wght@700&display=swap" rel="stylesheet">
+            <link href="//cdn-images.mailchimp.com/embedcode/classic-10_7_dtp.css" rel="stylesheet" type="text/css">
         {% endblock %}
 
         {% block extra_css %}
@@ -114,12 +115,8 @@
 
             <div class="container h-100">
                 <div class="row h-100 banner">
-                    <div class="col-9 col-md-9 my-auto text-center">
+                    <div class="col-12 col-md-12 my-auto text-center">
                         <h4 class="logo-font my-1">Free delivery on orders over ${{ free_delivery_threshold }}!</h4>                
-                    </div>
-                    <div class="col-3 col-md-3 my-auto text-center">
-                        <a href="#" class="text-black">Sign In</a> |
-                        <a href="#" class="text-black">Create an account</a>
                     </div>
                 </div>
             </div>
@@ -151,14 +148,44 @@
 
         {% block footer %}
         <div class="container">
+            <div class="row">
+                <div class="col-4">
+                    <!-- Begin Mailchimp Signup Form -->
+                    <div id="mc_embed_signup">
+                    <form action="https://herokuapp.us11.list-manage.com/subscribe/post?u=458ddb926079e4a43a4547b93&amp;id=852522783d" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+                        <div id="mc_embed_signup_scroll">
+                        <h3>Subscribe!</h3>
+                        <p>Sign up to our newsletter to get all the latest deals!</p>
+                    <div class="indicates-required"><span class="asterisk">*</span> indicates required</div>
+                    <div class="mc-field-group">
+                        <label for="mce-EMAIL">Email Address  <span class="asterisk">*</span></label>
+                        <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL">
+                    </div>
+                        <div id="mce-responses" class="clear foot">
+                            <div class="response" id="mce-error-response" style="display:none"></div>
+                            <div class="response" id="mce-success-response" style="display:none"></div>
+                        </div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+                        <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_458ddb926079e4a43a4547b93_852522783d" tabindex="-1" value=""></div>
+                            <div class="optionalParent">
+                                <div class="clear foot">
+                                    <input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button">
+                                    <p class="brandingLogo"><a href="http://eepurl.com/h3qd_n" title="Mailchimp - email marketing made easy and fun"><img src="https://eep.io/mc-cdn-images/template_images/branding_logo_text_dark_dtp.svg"></a></p>
+                                </div>
+                            </div>
+                        </div>
+                    </form>
+                    </div>
+                    <!--End mc_embed_signup-->
+                </div>
+            </div>
             <div class="row bg-color">
                 <div class="socials col-8 offset-3 col-md-3 offset-md-1">
                     <div class="row">
                         <div class="col-6">
-                            <i class="fa-brands fa-instagram"></i>
+                            <a href="#" class="social-a" target="_blank"><i class="fab fa-instagram"></i></a>
                         </div>  
                         <div class="col-6">
-                            <i class="fa-brands fa-facebook-square"></i>
+                            <a href="#" class="social-a" target="_blank"><i class="fab fa-facebook-square"></i></a>
                         </div>
                     </div>
                 </div>
@@ -169,45 +196,38 @@
                 </div>
                 <div class="contacts col-12 col-md-3">
                     <h4>Contact us:</h4>
-                    <a href="#" class="">Via the site</a>
+                    <a href="{% url 'contact' %}" class="">Via the site</a>
                     <br>
                     <p>Phone number: 07123456789</p>
                     <p>Email: stepldn@example.co.uk</p>
                 </div>
             </div>
         </div>
-        <!-- <div class="container h-100">
-            <div class="row bg-color">
-                <div class="col-12 col-md-3">
-                    <div class="row">
-                        <div class="col-6">
-                            <i class="fa-brands fa-instagram"></i>
-                        </div>  
-                        <div class="col-6">
-                            <i class="fa-brands fa-facebook-square"></i>
-                        </div>
-                    </div>
-                </div>
-                <div class="t-and-c col-12 col-md-4 text-center">
-                    <a href="#">Terms and conditions</a> |
-                    <a href="#"> Privacy policy</a>
-                    <br>
-                    <a href="#" class="">Site Map</a>
-                </div>
-                <div class="col-12 col-md-3">
-                    <h4>Contact us:</h4>
-                    <a href="#" class="">Via the site</a>
-                    <br>
-                    <p>Phone number: 07123456789</p>
-                    <p>Email: stepldn@example.co.uk</p>
-                </div>
-            </div>
-        </div>     -->
         {% endblock %}
 
         {% block postloadjs %}
             <script>
                 $('.toast').toast('show');
+            </script>
+            <!-- Mailchimp script -->
+            <script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script>
+            <script type='text/javascript'>(function($) {
+                window.fnames = new Array();
+                window.ftypes = new Array();
+                fnames[0]='EMAIL';
+                ftypes[0]='email';
+                fnames[1]='FNAME';
+                ftypes[1]='text';
+                fnames[2]='LNAME';
+                ftypes[2]='text';
+                fnames[3]='ADDRESS';
+                ftypes[3]='address';
+                fnames[4]='PHONE';
+                ftypes[4]='phone';
+                fnames[5]='BIRTHDAY';
+                ftypes[5]='birthday';
+                }(jQuery));
+                var $mcj = jQuery.noConflict(true);
             </script>
         {% endblock %}
 
